# Battleship

./: .gitignore  CMakeLists.txt  README.md
include/: AIStrategy.hpp  Board.hpp  Config.hpp  Game.hpp  OnlineGame.hpp  Player.hpp  Position.hpp  Renderer.hpp  Ship.hpp  ShipManager.hpp  StringUtils.hpp
include/net/: NetworkManager.hpp
src/: main.cpp
src/core/: AIStrategy.cpp  Board.cpp  Game.cpp  OnlineGame.cpp  Player.cpp  Position.cpp  Renderer.cpp  Ship.cpp
src/net/: NetworkManager.cpp
